updated to prevent scroll on input selection on smallscreen

--- a/styles.css
+++ b/styles.css
@@ -836,6 +836,13 @@ position: absolute;
         font-size: 16px;   /* iOS won't zoom if font-size is 16px or more */
     }
 
+     html, body {
+        position: fixed;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+    }
+
     body {
         flex-direction: column;
     }
